--- a/MiniProject-questions.ipynb
+++ b/MiniProject-questions.ipynb
@@ -1188,7 +1188,20 @@
    "id": "3a1c37ae-e2e6-4d24-8a25-12a1360d109c",
    "metadata": {},
    "source": [
-    "_Write your solution_\n"
+    "The Grover's operator acts as followed on a vector:\n",
+    "$$\n",
+    "G\\lvert \\Psi \\rangle = G(cos\\theta\\lvert S \\rangle + sin\\theta\\lvert P \\rangle) = cos(3\\theta)\\lvert S \\rangle + sin(3\\theta)\\lvert P \\rangle\n",
+    "$$\n",
+    "\n",
+    "Thus, in the basis $\\{\\lvert S \\rangle, \\lvert P \\rangle\\}$, $G$ is a rotation matrix of angle $2\\theta$ so\n",
+    "$$\n",
+    "G = \\begin{pmatrix}\n",
+    "cos2\\theta & -sin2\\theta \\\\\n",
+    "sin2\\theta & cos2\\theta\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "The eigenvalues of such a matrix are $e^{\\pm i2\\theta}$."
    ]
   },
   {
@@ -1227,8 +1240,29 @@
     "main_circuit = QuantumCircuit(N_qubits+N_measures,N_measures)\n",
     "\n",
     "######### (BEGIN) Your answer ##################\n",
+    "def control_U_n_power_n(U_n, n):\n",
+    "    circuit = QuantumCircuit(N_qubits, name=f\"U_n^{n}\")\n",
+    "    \n",
+    "    for _ in range(n):\n",
+    "        circuit.append(U_n, range(0, N_qubits))\n",
+    "    \n",
+    "    circuit = transpile(circuit, simulator)\n",
+    "    return circuit.control(1, \"CTRL BIT\")\n",
     "\n",
-    "...\n",
+    "# Hadamard on qubits measuring the eigenvalue and the qubit of U_f\n",
+    "main_circuit.h(list(range(N_qubits+N_measures)))\n",
+    "\n",
+    "# We apply c-U_f^(2^i)  \n",
+    "for i in range(N_measures):\n",
+    "    main_circuit.append(control_U_f_power_n(grover_op, 1 << i), [i] + list(range(N_measures, N_measures + N_qubits)))\n",
+    "    \n",
+    "# Inverse QFT gate\n",
+    "QFTgate = QFT(num_qubits=N_measures, inverse=True, insert_barriers=False)\n",
+    "main_circuit.append(QFTgate, list(range(N_measures)))\n",
+    "\n",
+    "# Measurement\n",
+    "for i in range(N_measures):\n",
+    "    main_circuit.measure(i,i)\n",
     "\n",
     "######### ( END ) Your answer ##################"
    ]
@@ -1262,7 +1296,7 @@
    "source": [
     "######### (BEGIN) Your answer ##################\n",
     "\n",
-    "...\n",
+    "main_circuit.draw(output='mpl')\n",
     "\n",
     "######### ( END ) Your answer ##################"
    ]
@@ -1296,7 +1330,10 @@
    "source": [
     "######### (BEGIN) Your answer ##################\n",
     "\n",
-    "...\n",
+    "tcircuit = transpile(main_circuit, simulator)\n",
+    "result = simulator.run(tcircuit, shots=4096).result()\n",
+    "counts = result.get_counts(tcircuit)\n",
+    "plot_histogram(counts, title='counts')\n",
     "\n",
     "######### ( END ) Your answer ##################"
    ]
@@ -1320,7 +1357,9 @@
    "id": "4a7ba414-164d-452c-8d7b-2e763abdbc2c",
    "metadata": {},
    "source": [
-    "_Your answer_"
+    "Using the quantum phase estimation, we can estimate $\\theta$, but we know that $cos(\\theta) = \\sqrt{\\frac{N-M}{N}}$ and $sin(\\theta) = \\sqrt{\\frac{M}{N}}$. Using the $\\theta$ given by the measurement and the knowledge of $N$, we can compute the number of solutions $M $.\n",
+    "\n",
+    "// TODO: Check that when the algorithm works"
    ]
   }
  ],
